控制组件方法

--- a/Selenium/Jupyter/Find.ipynb
+++ b/Selenium/Jupyter/Find.ipynb
@@ -101,6 +101,50 @@
     "wd.quit()"
    ],
    "id": "cfa4ce0e116c879c"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Test004_ElementFind\n",
+    "import time\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "wd = webdriver.Edge()\n",
+    "wd.get(\"https://www.unixde.com\")\n",
+    "\n",
+    "wd.implicitly_wait(5)\n",
+    "time.sleep(3)\n",
+    "\n",
+    "elements = wd.find_elements(By.TAG_NAME,\"div\")\n",
+    "print(len(elements))\n",
+    "\n",
+    "i = 1\n",
+    "for ele in elements:\n",
+    "    if ele.text:\n",
+    "        divs = ele.find_elements(By.TAG_NAME, \"div\")\n",
+    "        print(\"第\" + str(i) + \"个div里包含\" + str(len(divs)) + \"个div\")\n",
+    "    i += 1\n",
+    "\n",
+    "time.sleep(3)\n",
+    "wd.quit()"
+   ],
+   "id": "3bd0cca568f6c0c2"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# 隐式等待\n",
+    "wd.implicitly_wait()"
+   ],
+   "id": "eb60289ca30583f0"
   }
  ],
  "metadata": {
