CSS选择器(下) （1）选择多项 （2）按次序选择 （3）选择兄弟节点

--- a/Selenium/zzz_Jupyter/CSS.ipynb
+++ b/Selenium/zzz_Jupyter/CSS.ipynb
@@ -135,6 +135,107 @@
     "wd.quit()"
    ],
    "id": "dac82754acef9e02"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Test004_css选择多项\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "wd = webdriver.Edge()\n",
+    "wd.get(\"http://www.unixde.com/\")\n",
+    "wd.implicitly_wait(3)\n",
+    "\n",
+    "button_nums = wd.find_elements(By.CSS_SELECTOR,\"button\")\n",
+    "img_nums = wd.find_elements(By.CSS_SELECTOR,\"img\")\n",
+    "sum_nums = wd.find_elements(By.CSS_SELECTOR,\"button,img\")\n",
+    "\n",
+    "print(f\"按钮数={len(button_nums)}\")\n",
+    "print(f\"图片数={len(img_nums)}\")\n",
+    "print(f\"总数={len(sum_nums)}\")\n",
+    "if len(button_nums)+len(img_nums) == len(sum_nums):\n",
+    "    print(\"正确！\")\n",
+    "\n",
+    "print(\"--------------------------------------------\")\n",
+    "\n",
+    "\n",
+    "ele1 = wd.find_elements(By.CSS_SELECTOR,'[class=\"banner__inner\"] .zz-comp,div')\n",
+    "ele2 = wd.find_elements(By.CSS_SELECTOR,'[class=\"banner__inner\"] .zz-comp,[class=\"banner__inner\"] div')\n",
+    "\n",
+    "print(f\"banner__inner类中类为zz-comp数和所有元素中有div标签数之和={len(ele1)}\")\n",
+    "print(f\"banner__inner类中类为zz-comp数和含有div标签数之和={len(ele2)}\")\n",
+    "if len(ele1) > len(ele2):\n",
+    "    print(\"正确！\")\n",
+    "\n",
+    "\n",
+    "wd.quit()"
+   ],
+   "id": "d3287d1165730cf1"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Test005_css按次序选择\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "wd = webdriver.Edge()\n",
+    "wd.get(\"http://www.unixde.com/\")\n",
+    "wd.implicitly_wait(3)\n",
+    "\n",
+    "A1 = wd.find_elements(By.CSS_SELECTOR,\"[class*=zz]:nth-child(2)\")\n",
+    "A2 = wd.find_elements(By.CSS_SELECTOR,\"[class*=zz]:nth-last-child(2)\")\n",
+    "B1 = wd.find_elements(By.CSS_SELECTOR,\"[class*=zz]:nth-of-type(2)\")\n",
+    "B2 = wd.find_elements(By.CSS_SELECTOR,\"[class*=zz]:nth-last-of-type(2)\")\n",
+    "C1 = wd.find_elements(By.CSS_SELECTOR,\"[class*=zz]:nth-child(even)\")\n",
+    "C2 = wd.find_elements(By.CSS_SELECTOR,\"[class*=zz]:nth-child(odd)\")\n",
+    "C = wd.find_elements(By.CSS_SELECTOR,\"[class*=zz]\")\n",
+    "\n",
+    "print(len(A1))\n",
+    "print(len(A2))\n",
+    "print(len(B1))\n",
+    "print(len(B2))\n",
+    "print(len(C1))\n",
+    "print(len(C2))\n",
+    "print(len(C))\n",
+    "if len(C1) + len(C2) == len(C):\n",
+    "    print(\"正确！\")\n",
+    "\n",
+    "wd.quit()"
+   ],
+   "id": "3263274307c00a02"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Test006_css选择兄弟节点\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "wd = webdriver.Edge()\n",
+    "wd.get(\"http://www.unixde.com/\")\n",
+    "wd.implicitly_wait(3)\n",
+    "\n",
+    "\n",
+    "ele1 = wd.find_elements(By.CSS_SELECTOR,\"[class*=zz]+div\")\n",
+    "ele2 = wd.find_elements(By.CSS_SELECTOR,\"[class*=zz]~div\")\n",
+    "\n",
+    "print(len(ele1))\n",
+    "print(len(ele2))\n",
+    "\n",
+    "wd.quit()"
+   ],
+   "id": "f0ac2fed84a641dc"
   }
  ],
  "metadata": {
