--- a/Selenium/zzz_Jupyter/Frame_Windows.ipynb
+++ b/Selenium/zzz_Jupyter/Frame_Windows.ipynb
@@ -9,8 +9,92 @@
    },
    "outputs": [],
    "source": [
-    ""
+    "# Test001_frame切换\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "wd = webdriver.Edge()\n",
+    "wd.implicitly_wait(5)\n",
+    "wd.get(\"https://www.byhy.net/cdn2/files/selenium/sample2.html\")\n",
+    "\n",
+    "# 原frame搜索plant个数\n",
+    "ele1 = wd.find_elements(By.CSS_SELECTOR,'.plant')\n",
+    "print(f\"原frame搜索plant个数为：{len(ele1)}\")\n",
+    "\n",
+    "# 找到新的frame元素\n",
+    "new_frame = wd.find_element(By.CSS_SELECTOR,'[src=\"sample1.html\"]')\n",
+    "\n",
+    "# 切换窗口\n",
+    "wd.switch_to.frame(new_frame)\n",
+    "print(\"成功切换新的frame\")\n",
+    "ele2 = wd.find_elements(By.CSS_SELECTOR,'.plant')\n",
+    "print(f\"新的frame搜索plant个数为：{len(ele2)}\")\n",
+    "\n",
+    "# 切换回原frame\n",
+    "wd.switch_to.default_content()\n",
+    "print(\"成功切换原frame\")\n",
+    "ele3 = wd.find_elements(By.CSS_SELECTOR,'.plant')\n",
+    "print(f\"原frame搜索plant个数为：{len(ele3)}\")\n",
+    "\n",
+    "wd.quit()"
    ]
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "# Test002_windows切换\n",
+    "import time\n",
+    "from time import sleep\n",
+    "\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "wd = webdriver.Edge()\n",
+    "wd.implicitly_wait(5)\n",
+    "wd.get(\"http://www.baidu.com/\")\n",
+    "main_handle = wd.window_handles[0]\n",
+    "print(f\"当前窗口的标题为：{wd.title}\\n-----------------------------\")\n",
+    "\n",
+    "# 热搜\n",
+    "hot_button = wd.find_element(By.CSS_SELECTOR,'[src=\"https://psstatic.cdn.bcebos.com/basics/aichat/hot_search_x3_1747880381000.png\"]')\n",
+    "hot_button.click()\n",
+    "hot_handle = wd.window_handles[1]\n",
+    "wd.switch_to.window(hot_handle)\n",
+    "print(\"已切换热搜窗口\")\n",
+    "print(f\"当前窗口的标题为：{wd.title}\\n-----------------------------\")\n",
+    "\n",
+    "# 关于百度\n",
+    "aboutBaidu_button = wd.find_element(By.CSS_SELECTOR,'.c-font-small[href=\"//home.baidu.com\"]')\n",
+    "aboutBaidu_button.click()\n",
+    "about_handle = wd.window_handles[2]\n",
+    "wd.switch_to.window(about_handle)\n",
+    "sleep(0.5)\n",
+    "print(\"已切换关于百度窗口\")\n",
+    "print(f\"当前窗口的标题为：{wd.title}\\n-----------------------------\")\n",
+    "\n",
+    "\n",
+    "wd.switch_to.window(main_handle)\n",
+    "print(\"已切换原始窗口\")\n",
+    "print(f\"当前窗口的标题为：{wd.title}\\n-----------------------------\")\n",
+    "\n",
+    "# 遍历输出界面句柄和对应标题\n",
+    "handles = wd.window_handles\n",
+    "print(f\"当前共打开{len(handles)}个窗口，具体如下：\")\n",
+    "i = 1\n",
+    "for h in handles:\n",
+    "    wd.switch_to.window(h)\n",
+    "    print(f\"第{i}个窗口：\")\n",
+    "    print(f\"标题:{wd.title}\")\n",
+    "    print(f\"句柄:{h}\")\n",
+    "    print(\"----------------------\")\n",
+    "    i += 1\n",
+    "\n",
+    "wd.quit()"
+   ],
+   "id": "521ddb4a446a418f"
   }
  ],
  "metadata": {
