--- a/Selenium/zzz_Jupyter/05_SelectionBox.ipynb
+++ b/Selenium/zzz_Jupyter/05_SelectionBox.ipynb
@@ -8,14 +8,77 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": "# Test001_radio选择框\n"
+   "source": [
+    "# Test001_radio选择框\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "wd = webdriver.Edge()\n",
+    "wd.implicitly_wait(3)\n",
+    "wd.get(\"https://www.byhy.net/cdn2/files/selenium/test2.html\")\n",
+    "\n",
+    "radios = wd.find_elements(By.CSS_SELECTOR,\"#s_radio input\")\n",
+    "print(f\"一共找到{len(radios)}个radio组件!\")\n",
+    "\n",
+    "# 缺省\n",
+    "checked_radio1 = wd.find_element(By.CSS_SELECTOR,\"#s_radio input[checked]\")\n",
+    "print(\"缺省选中的radio的value内容为：\" + checked_radio1.get_attribute('value'))\n",
+    "\n",
+    "# 点击、当前选中\n",
+    "check_radio1 = wd.find_element(By.CSS_SELECTOR,\"#s_radio input:checked\")\n",
+    "print(\"当前选中的是：\" + check_radio1.get_attribute('value'))\n",
+    "radios[1].click()\n",
+    "print(\"完成点击！\")\n",
+    "check_radio2 = wd.find_element(By.CSS_SELECTOR,\"#s_radio input:checked\")\n",
+    "print(\"当前选中的是：\" + check_radio2.get_attribute('value'))\n",
+    "\n",
+    "# 缺省\n",
+    "checked_radio2 = wd.find_element(By.CSS_SELECTOR,\"#s_radio input[checked]\")\n",
+    "print(\"缺省选中的radio的value内容为：\" + checked_radio2.get_attribute('value'))\n",
+    "\n",
+    "wd.quit()"
+   ]
   },
   {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "# Test002_checkBox选择框\n",
+   "source": [
+    "# Test002_checkBox选择框\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "\n",
+    "wd = webdriver.Edge()\n",
+    "wd.implicitly_wait(3)\n",
+    "wd.get(\"https://www.byhy.net/cdn2/files/selenium/test2.html\")\n",
+    "\n",
+    "radios = wd.find_elements(By.CSS_SELECTOR,'#s_checkbox > input')\n",
+    "print(f\"找到 {len(radios)} 个checkBox选择框\")\n",
+    "\n",
+    "# 缺省\n",
+    "checked = wd.find_element(By.CSS_SELECTOR,'#s_checkbox > input[checked]')\n",
+    "print(checked.get_attribute('value'))\n",
+    "\n",
+    "# 当前选中，\n",
+    "checks = wd.find_elements(By.CSS_SELECTOR,'#s_checkbox > input:checked')\n",
+    "for check in checks:\n",
+    "    print(check.get_attribute('value'))\n",
+    "\n",
+    "# 取消所有选中，点击多个\n",
+    "checks = wd.find_elements(By.CSS_SELECTOR,'#s_checkbox > input:checked')\n",
+    "for check in checks:\n",
+    "    check.click()\n",
+    "radios[0].click()\n",
+    "radios[1].click()\n",
+    "\n",
+    "# 当前选中\n",
+    "checks = wd.find_elements(By.CSS_SELECTOR,'#s_checkbox > input:checked')\n",
+    "for check in checks:\n",
+    "    print(check.get_attribute('value'))\n",
+    "\n",
+    "wd.quit()"
+   ],
    "id": "5c78e8ef29b75615"
   },
   {
@@ -23,7 +86,86 @@
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
-   "source": "# Test003_select选择框\n",
+   "source": [
+    "# Test003_select选择框\n",
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.support.select import Select\n",
+    "\n",
+    "wd = webdriver.Edge()\n",
+    "wd.implicitly_wait(3)\n",
+    "wd.get(\"https://www.byhy.net/cdn2/files/selenium/test2.html\")\n",
+    "\n",
+    "# print(len(wd.find_elements(By.CSS_SELECTOR,'select')))\n",
+    "sel1 = wd.find_elements(By.CSS_SELECTOR,'select')[0]\n",
+    "sel2 = wd.find_elements(By.CSS_SELECTOR,'select')[1]\n",
+    "\n",
+    "select1 = Select(sel1)\n",
+    "select2 = Select(sel2)\n",
+    "\n",
+    "\n",
+    "# 区分单选、多选\n",
+    "multiple = wd.find_elements(By.CSS_SELECTOR,'select[multiple]')\n",
+    "print(f\"多选框有{len(multiple)}个\")\n",
+    "print(\"---------------------------------------\")\n",
+    "\n",
+    "# 缺省\n",
+    "print(\"单选框的默认选择元素为：\" + sel1.find_element(By.CSS_SELECTOR,'[selected]').get_attribute('value'))\n",
+    "print(\"多选框的默认选择元素为：\" + sel2.find_element(By.CSS_SELECTOR,'[selected]').get_attribute('value'))\n",
+    "print(\"---------------------------------------\")\n",
+    "\n",
+    "# 当前选中\n",
+    "options1_sele = select1.all_selected_options\n",
+    "options2_sele = select2.all_selected_options\n",
+    "print(\"单选框当前选择为：\")\n",
+    "for option in options1_sele:\n",
+    "    print(option.text)\n",
+    "print(\"多选框当前选择为：\")\n",
+    "for option in options2_sele:\n",
+    "    print(option.text)\n",
+    "print(\"---------------------------------------\")\n",
+    "\n",
+    "# 所有元素\n",
+    "options1 = select1.options\n",
+    "options2 = select2.options\n",
+    "print(\"单选框所有选择为：\")\n",
+    "for option in options1:\n",
+    "    print(option.text)\n",
+    "print(\"多选框所有选择为：\")\n",
+    "for option in options2:\n",
+    "    print(option.text)\n",
+    "print(\"---------------------------------------\")\n",
+    "\n",
+    "# 选中/去选\n",
+    "# 单选框\n",
+    "print(\"单选框选择小雷老师\")\n",
+    "select1.select_by_index(0)\n",
+    "select1.select_by_value('小雷老师')\n",
+    "select1.select_by_visible_text('小江老师')\n",
+    "# 多选框\n",
+    "print(\"多选框全选\")\n",
+    "select2.deselect_all()\n",
+    "select2.select_by_index(0)\n",
+    "select2.select_by_value('小雷老师')\n",
+    "select2.select_by_visible_text('小凯老师')\n",
+    "print('----------------------------------------')\n",
+    "\n",
+    "# 当前选中\n",
+    "options1_sele = select1.all_selected_options\n",
+    "options2_sele = select2.all_selected_options\n",
+    "print(\"单选框当前选择为：\")\n",
+    "for option in options1_sele:\n",
+    "    print(option.text)\n",
+    "print(\"多选框当前选择为：\")\n",
+    "for option in options2_sele:\n",
+    "    print(option.text)\n",
+    "print(\"---------------------------------------\")\n",
+    "\n",
+    "print(select2.is_multiple)\n",
+    "print(select2.first_selected_option.text)\n",
+    "\n",
+    "wd.quit()"
+   ],
    "id": "a0f35d76ea001403"
   }
  ],
